Feat: add ability to configure src and bin folders